--- a/src/index.css
+++ b/src/index.css
@@ -11,13 +11,15 @@
 }
 
 :root {
-    --bg-color: hsl(220, 18%, 78%);
+    --bg-color-light: #dbf9f0;
+    --bg-color-dark: #A3BBAD;
     --color-primary: rgb(42, 20, 92);
-    --color-purple: rgb(107, 82, 165);
+    --color-purple: #7180b9;
     --color-gold: rgb(192, 152, 57);
     --color-gold-variant: rgba(241, 173, 14, 0.6);
-    --color-black: #333;
-    --color-white: #f1f2f1;
+    --color-light: #6F5E53;
+    --color-black: #000000 ;
+    --color-white: #f7f9f7;
 
     --font-regular: 400;
     --font-medium: 500;
@@ -40,7 +42,7 @@ html {
 body {
     font-family: 'Lora', serif;
     overflow-x: hidden;
-    background: var(--color-purple);
+    background: var(--bg-color-light);
     line-height: 1.7;
 }
 
