--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,113 +1,196 @@
-header {
-    height: 6rem;
-    width: 100Vw;
-    display: grid;
-    background: var(--color-primary);
-    place-items: center;
+.header {
+    width: 100%;
+    background: transparent;
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 99;
-}
-
-.nav-container {
-    height: 100%;
+    z-index: var(--z-fixed);
+    /*For animation dark mode*/
+    transition: .4s;
+  }
+  
+  .nav {
+    height: var(--header-height);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
-}
-
-.nav-toggle {
-    display: none;
-}
-
-
-
-.nav-links {
-    display: flex;
-    gap: 3rem;
+  }
+  
+  .nav__logo, 
+  .nav__toggle, 
+  .nav__shop, 
+  .nav__close {
+    color: var(--title-color);
+  }
+  
+  .nav__logo {
+    text-transform: uppercase;
+    font-weight: var(--font-bold);
+    letter-spacing: 1px;
+    display: inline-flex;
     align-items: center;
+    column-gap: .25rem;
+  }
+  
+  .nav__logo-icon {
+    font-size: 1.25rem;
+  }
+  
+  .nav__btns {
+    display: flex;
+    align-items: center;
+    column-gap: 1rem;
+  }
+  
+  .nav__toggle, 
+  .nav__shop {
+    font-size: 1.25rem;
+    cursor: pointer;
+  }
+  
+  @media screen and (max-width: 767px) {
+    .nav__menu {
+      position: fixed;
+      background-color: var(--body-color);
+      top: 0;
+      right: -100%;
+      width: 100%;
+      height: 100%;
+      padding: 6rem 2rem 3.5rem;
+      transition: .3s;
+    }
+  }
+  
+  .nav__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 2rem;
+  }
+  
+  .nav__link {
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    text-transform: uppercase;
+    font-size: var(--h2-font-size);
+    transition: .3s;
+  }
+  
+  .nav__link:hover {
+    color: var(--first-color);
+  }
+  
+  .nav__close {
+    font-size: 2rem;
+    position: absolute;
+    top: .9rem;
+    right: 1.25rem;
+    cursor: pointer;
+  }
+  
+  /* Show menu
+  .show-menu {
+    right: 0;
+  }
+  
+   Change background header 
+  .scroll-header {
+    background-color: var(--body-color);
+    box-shadow: 0 1px 4px hsla(0, 4%, 15%, .10);
+  }
+  
+   Active link 
+  .active-link {
+    color: var(--first-color);
+  } */
+
+
+ 
+/*=============== BREAKPOINTS ===============*/
+/* For small devices */
+@media screen and (max-width: 320px) {
+  .container {
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+  .home__img-bg {
+    width: 220px;
+  }
+  .home__title {
+    font-size: var(--h1-font-size);
+  }
+  .home__button {
+    font-size: var(--smaller-font-size);
+  }
+
+  .story__square,
+  .story__img,
+  .testimonial__square,
+  .testimonial__img {
+    width: 180px;
+  }
+
+  .story__square,
+  .testimonial__square {
+    height: 180px;
+  }
+
+  .products__container {
+    grid-template-columns: repeat(1, 180px);
+    justify-content: center;
+  }
 }
 
-.nav-links a {
-    transition: var(--transition);
+/* For medium devices */
+@media screen and (min-width: 576px) {
+  .home__img-bg {
+    width: 340px;
+  }
+
+  .featured__container {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1.5rem;
+  }
+
+  .footer__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
-.nav-links a:hover {
-    background: transparent;
-    border: 1px solid var(--color-white);
-    padding: 0.5rem 1rem;
-    border-radius: 0.4rem;
+@media screen and (min-width: 767px) {
+  .section {
+    padding: 8rem 0 1rem;
+  }
+
+  .cart {
+    width: 420px;
+    box-shadow: -2px 0 4px hsla(0, 0%, 15%, .1);
+  }
+
+  .nav {
+    height: calc(var(--header-height) + 1.5rem);
+    justify-content: initial;
+    column-gap: 3rem;
+  }
+  .nav__toggle, 
+  .nav__close {
+    display: none;
+  }
+  .nav__list {
+    flex-direction: row;
+    column-gap: 2.5rem;
+  }
+  .nav__link {
+    text-transform: initial;
+    font-size: var(--normal-font-size);
+  }
+  .nav__btns {
+    margin-left: auto;
+  }
+
 }
 
-a.active {
-    background: transparent;
-    border: 1px solid var(--color-white);
-    padding: 0.5rem 1rem;
-    border-radius: 0.4rem;
-}
 
 
-
-/* Responsiveness for tablets*/
-
-@media screen and (max-width: 1024px) {
-    .nav-toggle {
-        display: inline-block;
-        background: transparent;
-        font-size: 1.8rem;
-        cursor: pointer;
-    }
-
-    .nav-links {
-        position: absolute;
-        top: 100%;
-        right: 0;
-        flex-direction: column;
-        gap: 0;
-    }
-
-    a.active {
-        display: none;
-    }
-
-    .nav-links li {
-        height: 4rem;
-        width: 100%;
-        box-shadow: 1rem 2rem rgba(0, 0, 0, 0.4);
-    }
-
-    .nav-links li a {
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        background: var(--color-purple);
-        padding: 1rem 2.5rem;
-    }
-
-    .show-nav {
-        display: flex;
-    }
-
-    .hide-nav {
-        display: none;
-    }
-
-
-} 
-
-
-
-/* Responsiveness for phones*/
-
-/* @media screen and (max-width: 650px) {
-    .container {
-        width: var(--container-width-sm);
-    }
-
-    section > h2 {
-        margin-bottom: 2rem;
-    }
-}  */
