--- a/src/Components/Contact/contact.css
+++ b/src/Components/Contact/contact.css
@@ -1,10 +1,8 @@
 .wrapper.contact-container {
-    /* width: 58%; */
     display: grid;
-    grid-template-columns: 30% 58%;
-    row-gap: 7.5rem;
-    background: hsl(0,0%,88%);
-    padding: 5rem;
+    grid-template-columns: 30% 58%;    
+    background: var(--container-color);
+    padding: 5rem;    
 }
 
 .contact-left {
@@ -14,17 +12,23 @@
 }
 
 .contact {
-    background: transparent;
+    background: var(--color-primary);
     padding: 1.1rem;
-    border-radius: 1rem;
+    border-radius: 0.5rem;
     text-align: center;
-    border: 1px solid var(--color-primary);
     transition: var(--transition);
 }
 
-.contact:hover {
-    background: var(--color-primary);
+article.contact {
+    background: rgb(231, 204, 140, 0.5);
+    border: 1px solid var(--first-color);
+    transition: var(--transition);
+    margin-bottom: 0.5rem;
+}
+
+article.contact:hover {
     transform: scale(1.2);
+    background: transparent;
 }
 
 .contact-icon {
@@ -36,25 +40,54 @@
 .contact-left a {
     margin-top: 0.7rem;
     display: inline-block;
-    font-size: 0.8rem;
+    font-size: 0.85rem;
+    cursor: pointer;
+    color: var(--first-color);
 }
 
+.form-btn {
+    width: max-content;
+    display: inline-block;
+    color: var(--color-gold);
+    padding: 0.8rem 1.2rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    background: var(--first-color);
+    transition: var(--transition);
+}
 
+.form-btn:hover {
+    background: transparent;
+    color: var(--color-primary);
+    border: var(--color-gold);
+    transform: scale(1.1);
+}
+
+.container-right {
+    margin-right: 5rem;
+    margin-left: -3rem;
+    padding: 1.3rem;
+    background: rgb(231, 204, 140, 0.5);
+    border-radius: 0.5rem;
+    width: 100%;
+    border: 1px solid var(--first-color);
+}
 
 form {
+    background: transparent;
     display: flex;
     flex-direction: column;
     gap: 1.2rem;
 }
 
 input, textarea {
-    width: 100%;
+    width: 98%;
     padding: 1.5rem;
     background: transparent;
     border-radius: 0.5rem;
-    border: 0.8px solid var(--color-primary-variant);
+    border: 0.8px solid var(--first-color);
     resize: none;
-    color: var(--color-whit);
+    color: var(--button-color);
 }
 
 
@@ -65,6 +98,11 @@ input, textarea {
         grid-template-columns: 1fr;
         gap: 2rem;
    }
+
+   .container-right {
+    margin-left: 0;
+}
+
 } 
 
 
@@ -72,7 +110,8 @@ input, textarea {
 /* Responsiveness for phones*/
 
 @media screen and (max-width: 650px) {
-    .contact.contact-container {
+    .wrapper.contact-container {
         width: var(--container-width-sm);
+        
    }
 } 
