--- a/src/Components/Featured/featured.css
+++ b/src/Components/Featured/featured.css
@@ -52,6 +52,10 @@
     transform: translateY(1rem);
     opacity: 0;
   }
+
+  .featured__button:hover {
+    color: var(--color-gold);
+  }
   
   .featured__card:hover {
     box-shadow: 0 12px 32px hsla(0, 0%, 20%, .1);
@@ -66,4 +70,65 @@
   .featured__card:hover .featured__price {
     margin-bottom: var(--mb-1-5);
   }
+
+
+
+  /*=============== BREAKPOINTS ===============*/
+/* For small devices */
+@media screen and (max-width: 320px) {
+  .container {
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+
+}
+
+/* For medium devices */
+@media screen and (min-width: 576px) {
+  
+  .featured__container {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: flex-start;
+    gap: 1.5rem;
+  }
+
+  
+}
+
+@media screen and (min-width: 767px) {
+  .section {
+    padding: 8rem 0 1rem;
+  }
+
+  .featured__title,
+  .featured__price,
+  .new__title,
+  .new__price {
+    font-size: var(--normal-font-size);
+  }
+
+}
+
+@media screen and (min-width: 992px) {
+  .section__title {
+    font-size: var(--h2-font-size);
+  }
+
+  .featured__container {
+    grid-template-columns: repeat(3, 312px);
+    padding-top: 2rem;
+  }
+  
+ 
+}
+
+/* For large devices */
+@media screen and (min-width: 1024px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+ 
+}
   
