--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -4,6 +4,11 @@
     padding-bottom: 3rem;
     background: var(--title-color);
   }
+
+  .footer a:hover {
+    color: var(--color-gold);
+    text-transform: uppercase;
+  }
   
   .footer__title {
     font-size: var(--h2-font-size);
@@ -37,6 +42,7 @@
   
   .footer__social-link:hover {
     color: var(--title-color);
+    transform: scale(1.4);
   }
   
   .footer__copy {
@@ -46,3 +52,55 @@
     font-size: var(--smaller-font-size);
     color: var(--text-color-light);
   }
+
+
+
+/*=============== BREAKPOINTS ===============*/
+/* For small devices */
+@media screen and (max-width: 320px) {
+  .container {
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
+  
+}
+
+/* For medium devices */
+@media screen and (min-width: 576px) {
+
+
+  .footer__container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .section {
+    padding: 8rem 0 1rem;
+  }
+
+
+  .footer__container {
+    grid-template-columns: repeat(4, max-content);
+    justify-content: space-between;
+  }
+  .footer__title {
+    font-size: var(--h3-font-size);
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .section__title {
+    font-size: var(--h2-font-size);
+  }
+
+}
+
+/* For large devices */
+@media screen and (min-width: 1024px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+}
